--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <h1>ABC BlackJack</h1>
+    <header>
+       <h1>ABC BlackJack</h1>
+    </header>
+    
+    <br>
 
     <button class="action-button" id="start-button"> Start Game</button>
 
