--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <button class="action-button" id="start-button"> Start Game</button>
 
-    <button class="action-button" id="draw-button"> Draw </button>
+    <button class="action-button" id="hit-button"> Hit </button>
 
-    <button class="action-button" id="fold-button"> Fold </button>
+    <button class="action-button" id="stand-button"> Stand </button>
 
     <button class="action-button" id="reset-button"> Reset Game </button>
 
@@ -41,21 +41,12 @@
                         <h2 id="dealer-total"> 0 </h2>
                     </td>
                 </tr>
+                <tr>
+                    <ul id="drawn-cards"></ul>
+                </tr>
             </tbody>
         </table>
     </div>
-
-<!--     <div>
-        <ul id="game-table"> </ul>
-        <div>
-            <h2 id="player-total"> 0 </h2>
-        </div>
-        <div>
-            <h2 id="dealer-total"> 0 </h2>
-        </div>
-    </div>
- -->
-
 </body>
 <script src="./app.js"></script>
 
