--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <th>Player</th>
                     <th>Dealer</th>
                 </tr>
+                <tr>
+                    <h3 id="dialogue-box">Welcome!</h3>
+                </tr>
             </thead>
             <tbody>
                 <tr>
